# AlgoLib_CPlusPlus

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  Makefile  README.md  run-tests.sh
src/: CMakeLists.txt
src/algolib/: 2sat.cpp  2sat.hpp  bfs_table.cpp  bfs_table.hpp  binary_search.cpp  binary_search.hpp  closest_points.cpp  closest_points.hpp  convex_hull.cpp  kmp.cpp  kmp.hpp  kmr.cpp  kmr.hpp  lis.cpp  lis.hpp  maximum_subarray.cpp  maximum_subarray.hpp  najblizsze_punkty.cpp  najblizsze_punkty.hpp  otoczka_wypukla.cpp  otoczka_wypukla.hpp  psoms.cpp  psoms.hpp  sorting.cpp  sorting.hpp  subseqs.cpp  two_sat.cpp  two_sat.hpp  vector_sorting.cpp
src/algolib/geometry/: closest_points.cpp  convex_hull.cpp  geometry.cpp  geometry_object.cpp  point.cpp  point2d.cpp  point3d.cpp  points_sorting.cpp  vector.cpp  vector2d.cpp  vector3d.cpp
src/algolib/graphs/: cutting.cpp  cutting.hpp  dinic.cpp  dinic.hpp  directed_graph.cpp  directed_graph.hpp  edge.cpp  edmonds.cpp  edmonds.hpp  forest_graph.cpp  forest_graph.hpp  graph.cpp  graph.hpp  hopcroft.cpp  hopcroft.hpp  lca.cpp  lca.hpp  lowest_common_ancestor.cpp  matching.cpp  matching.hpp  minimal_spanning_tree.cpp  mosty.cpp  mosty.hpp  mst.cpp  mst.hpp  multipartite_graph.cpp  multipartite_graph.hpp  paths.cpp  paths.hpp  properties.cpp  punkty_artykulacji.cpp  punkty_artykulacji.hpp  scc.cpp  scc.hpp  searching.cpp  searching.hpp  searching_strategy.cpp  simple_graph.cpp  strongly_connected_components.cpp  topological_sorting.cpp  (+5 more)
src/algolib/graphs_new/: directed_graph.cpp  edge.cpp  graph.cpp  multipartite_graph.cpp  properties.cpp  simple_graph.cpp  undirected_graph.cpp  vertex.cpp
src/algolib/math/: equation_system.cpp  fraction.cpp  maths.cpp  primes.cpp
src/algolib/mathmat/: equation.cpp  equation_system.cpp  fraction.cpp  maths.cpp  primes.cpp
src/algolib/maths/: equation.cpp  equation_system.cpp  fraction.cpp  fraction.hpp  integers.cpp  maths.cpp  maths.hpp  prime_checking.cpp  prime_checking.hpp  prime_tests.cpp  prime_tests.hpp  primes.cpp  primes_searching.cpp  primes_testing.cpp  sieve.cpp  sieve.hpp
src/algolib/old_graphs/: directed_graph.cpp  graph.cpp  multipartite_graph.cpp  tree_graph.cpp  undirected_graph.cpp
src/algolib/sequences/: longest_common_subsequence.cpp  longest_increasing_subsequence.cpp  maximum_subarray.cpp  sorting.cpp  subseqs.cpp  subsequences.cpp  vector_sorting.cpp
src/algolib/structures/: avl_tree.cpp  avl_tree.hpp  disjoint_sets.cpp  disjoint_sets.hpp  double_heap.cpp  equation_system.cpp  equation_system.hpp  kmr_factors_dict.cpp  kmr_factors_dict.hpp  pairing_heap.cpp
src/algolib/text/: base_words_map.cpp  basic_factors_map.cpp  edit_distance.cpp  kmp.cpp  kmr.cpp  knuth_morris_pratt.cpp  suffix_array.cpp  trie.cpp
src/refhumbold/algolib/: subseqs.cpp  vector_sorting.cpp
test/: CMakeLists.txt  avl_tree_test.cpp  directed_graph_test.cpp  disjoint_sets_test.cpp  double_heap_test.cpp  equation_system_test.cpp  equation_test.cpp  fraction_test.cpp  kmp_test.cpp  lca_test.cpp  lowest_common_ancestor_test.cpp  maths_test.cpp  maximum_subarray_test.cpp  minimal_spanning_tree_test.cpp  mst_test.cpp  paths_test.cpp  points_sorting_test.cpp  primes_test.cpp  scc_test.cpp  searching_test.cpp  sieve_test.cpp  sorting_test.cpp  strongly_connected_components_test.cpp  subseqs_test.cpp  subsequences_test.cpp  suffix_array_test.cpp  topological_sorting_test.cpp  tree_graph_test.cpp  undirected_graph_test.cpp
test/algolib/graphs/: directed_graph_test.cpp  multipartite_graph_test.cpp  tree_graph_test.cpp  undirected_graph_test.cpp
test/algolib/maths/: equation_system_test.cpp  equation_test.cpp  fraction_test.cpp  integers_test.cpp  maths_test.cpp  primes_searching_test.cpp  primes_testing_test.cpp
test/algolib/sequences/: longest_common_subsequence_test.cpp  longest_increasing_subsequence_test.cpp  maximum_subarray_test.cpp  sorting_test.cpp
test/algolib/structures/: avl_tree_test.cpp  disjoint_sets_test.cpp
test/algolib/text/: base_words_map_test.cpp  basic_factors_map_test.cpp  edit_distance_test.cpp  knuth_morris_pratt_test.cpp  suffix_array_test.cpp  trie_test.cpp
test/geometry/: closest_points_test.cpp  convex_hull_test.cpp  points_sorting_test.cpp
test/geometry/2d/: closest_points_test.cpp  convex_hull_test.cpp  geometry_2d_test.cpp
test/geometry/3d/: geometry_3d_test.cpp
test/geometry/dim2/: closest_points_test.cpp  convex_hull_test.cpp  geometry_2d_test.cpp  vector_2d_test.cpp
test/geometry/dim3/: geometry_3d_test.cpp  vector_3d_test.cpp
test/geometry/plane/: closest_points_test.cpp  convex_hull_test.cpp  geometry2d_test.cpp  geometry_2d_test.cpp
test/geometry/space/: geometry3d_test.cpp  geometry_3d_test.cpp
test/graphs/: directed_graph_test.cpp  multipartite_graph_test.cpp  tree_graph_test.cpp  undirected_graph_test.cpp
test/graphs/algorithms/: cutting_test.cpp  lowest_common_ancestor_test.cpp  matching_test.cpp  minimal_spanning_tree_test.cpp  paths_test.cpp  searching_test.cpp  shortest_paths_test.cpp  strongly_connected_components_test.cpp  topological_sorting_test.cpp  tree_diameter_test.cpp
test/graphs_new/: directed_graph_test.cpp  multipartite_graph_test.cpp  tree_graph_test.cpp  undirected_graph_test.cpp
test/graphs_new/algorithms/: cutting_test.cpp  lowest_common_ancestor_test.cpp  matching_test.cpp  minimal_spanning_tree_test.cpp  paths_test.cpp  (+3 more)
test/mathmat/: equation_system_test.cpp  equation_test.cpp  fraction_test.cpp  maths_test.cpp  primes_test.cpp
test/maths/: equation_system_test.cpp  equation_test.cpp  fraction_test.cpp  maths_test.cpp  primes_test.cpp  primes_testing_test.cpp
test/sequences/: longest_common_subsequence_test.cpp  longest_increasing_subsequence_test.cpp  maximum_subarray_test.cpp  sorting_test.cpp  subsequences_test.cpp
test/structures/: avl_tree_test.cpp  disjoint_sets_test.cpp  double_heap_test.cpp  pairing_heap_test.cpp
test/text/: base_words_map_test.cpp  edit_distance_test.cpp  kmp_test.cpp  knuth_morris_pratt_test.cpp  suffix_array_test.cpp  trie_test.cpp
(+311 files in other folders)
